# PEAR-Weather

./: .gitignore  README.md  env.py  pyproject.toml  run.sh  run_cpu.sh
container/: build.sh  image.def
experiments/weather/: cdsmontly.py  data.py  eval_all_weather.py  evaluate.py  hydrate_dataset_cache.py  inference_time.py  metrics.py  parameter_counts.py  spatial_rmse_save.py
experiments/weather/models/: hp_shifting.py  hp_windowing.py  pangu.py  swin_hp_pangu_pad.py
experiments/weather/weatherlearn/: README.md
ingestion/: ingest.py
lib/: compute_env.py  compute_env_config.py  data_registry.py  ddp.py  distributed_trainer.py  ensemble.py  export.py  files.py  git.py  metric.py  model_factory.py  paths.py  render_duck.py  serialization.py  slurm.py  stable_hash.py  test_utils.py  train.py  train_visualization.py
lib/datasets/: join.py
